--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1019,10 +1019,13 @@ background-size: cover; */
 /* border:1px solid white; */
 clip-path: circle();
 border-radius: 58%;
-background:rgba(0,0,0,.3);
+background:transparent !important;
 margin:1%;
 background-position:top;
+opacity:0;
+transition: opacity 1200ms ease-in-out;
 }
+
 
 .avatar-frame{
   filter: drop-shadow(0px 0px 4px #999);
@@ -1047,7 +1050,7 @@ display: none !important;
 
 .ReactModal__Overlay {
 	opacity: 0;
-	transition: opacity 600ms ease-in-out;
+	transition: opacity 400ms ease-in-out;
 }
 .ReactModal__Overlay--after-open{
 	opacity: 1;
