--- a/src/styles/css-grid-utility.scss
+++ b/src/styles/css-grid-utility.scss
@@ -10,6 +10,9 @@ $columns: 1, 2, 3;
 // $breakpoints: "sm", "md", "lg", "xl";
 // $breakpoint-sizes: 576px, 768px, 992px, 1200px;
 
+// body{background-color:#ff0000 !important;}
+
+
 // creates CSS grid template columns with $columns
 @mixin mk-columns($breakpoint) {
   @each $column in $columns {
