--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2561,7 +2561,7 @@ opacity:.8;
     
 
             @import "animate.css";
-            @import "user.css";
+            /* @import "user.css"; */
 
 
 
