--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2560,7 +2560,7 @@ opacity:.8;
       
     
 
-            @import "animate.css";
+            /* @import "animate.css"; */
             /* @import "user.css"; */
 
 
