--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -123,6 +123,9 @@ opacity:.8;
   }
 
 
+  .featured-image {
+    max-height:400px ;
+  }
 
   @media (max-width: 48rem) {
     .clickplay{
@@ -130,8 +133,12 @@ opacity:.8;
       font-size:'2rem' !important;
     }
     .clickplay span{
-      font-size:2rem !important;
+      font-size:1.2rem !important;
       color:#fff !important; 
+    }
+
+    .featured-image {
+      max-height:250px !important;
     }
 
   }
@@ -208,7 +215,7 @@ display: none !important;
     height:100vh; */
     top: 0;
     left: 0;
-    background:#000;
+    background:transparent !important;
   }
 
 
@@ -656,9 +663,6 @@ height:0;
 
 
 
-  @-webkit-keyframes slide {
-    100% { width:0; }
-}
 
 
 @keyframes slide {
@@ -667,32 +671,22 @@ height:0;
 
 
 
-  @-webkit-keyframes slide {
-    100% { width:0; }
-}
 
 
-@keyframes slide {
-    100% { width:0; }
-}
-
-
-@-webkit-keyframes move {
+@keyframes move {
   0% {
-    transform-origin: 60% 80%;
-    transform: scale(1.0);
+    opacity: 1;
+    z-index: -3;    
+    /* transform: scale(1.0);
+    transform-origin: 50% 0%; */
   }
   
 
-  
-    40% {
-    transform-origin: 30% 60%;
-    transform: scale(1.4);
-  }
-  
   100% {
-    transform: scale(1.6);
-    transform-origin: 40% 10%;
+/* transform-origin: top -80%;
+    transform: scale(0); */
+    opacity: 0;
+    z-index: -3;
   }
 }
 
@@ -1078,7 +1072,7 @@ font-size: 1.2rem;
 }
 
 
-.ReactModalPortal header, .ReactModalPortal footer, .ReactModalPortal div.toppad, .ReactModalPortal .fluff, .ReactModalPortal .audio, .ReactModalPortal .headline, .ReactModalPortal .intro:before, .ReactModalPortal .intro:after, .ReactModalPortal .back, .ReactModalPortal .usability{
+ .ReactModalPortal footer, .ReactModalPortal div.toppad, .ReactModalPortal .fluff, .ReactModalPortal .audio, .ReactModalPortal .headline, .ReactModalPortal .intro:before, .ReactModalPortal .intro:after, .ReactModalPortal .back, .ReactModalPortal .usability{
 display: none !important;
 
 }
@@ -1109,6 +1103,7 @@ display: none !important;
 	box-shadow: 0px 1px 10px 10px rgba(0, 0, 0, 0.5);
 	box-shadow: none !important;
   width:90vw;
+  inset:0 !important;
 }
 
 
@@ -1573,7 +1568,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   animation-fill-mode: forwards;
 }
 
-@-webkit-keyframes fade {
+@keyframes fade {
   0%{
     opacity: 0;
  }
@@ -2327,7 +2322,7 @@ background: rgba(0,0,0,0.6);
         font-size: clamp(18px, calc(1rem + 2vw), 36px);
         font-size:clamp(2rem, 2.5vw, 2.8rem);
    
-        width:100%;
+        width:auto;
         transition: all .6s ease-out;
         display:block !important;
 
@@ -2624,6 +2619,7 @@ opacity:.8;
     margin-left: auto;
     margin-right: auto;
     }
+
   
   
   .blog-post-content blockquote, .blog-post-content h2, .blog-post-content h3, .blog-post-content h4, .blog-post-content h5{
@@ -2769,7 +2765,7 @@ opacity:.8;
             }
 
             .article-header {
-              padding: 35px 0;
+              padding: 15px 0;
               text-align: center;
               margin: 0 auto;
             }
@@ -2953,7 +2949,7 @@ opacity:.8;
                            
        
              .RArrow span::before{
-               content:"scroll \276F \276F";
+               content:"\276F \276F";
              }
              .RArrow{
                position:absolute;
@@ -3008,7 +3004,7 @@ opacity:.8;
        /* border:1px solid red !important; */
        /* width:105% !important; */
        /* height:100vh !important; */
-       padding:0 20% 0 0 !important;
+       padding:0 25% 0 0 !important;
        margin:0 0 0 0 !important;
        /* width:auto !important; */
        /* margin-left: -50px !important; */
