--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -908,6 +908,7 @@ filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));  */
   @media (max-width: 48rem) {
   .themer{order:8 !important}
   .keyboard{height:40px !important;}
+  #installedbar {position: absolute !important; margin-top: 20vh !important;}
   }
 
 .has-app{display:none !important;}
@@ -925,6 +926,7 @@ filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));  */
   #installer{display: none !important; border:10px solid yellow !important;}
   #info, #posts, .toolbar{display:none !important;}
   #installedbar{display:flex !important;}
+  #resume{margin-bottom: 20vh;}
 
 }
 	
@@ -1123,7 +1125,7 @@ display: none !important;
 
 section{
   /* height:100% !important; */
-   padding-bottom:3rem;
+   /* padding-bottom:3rem; */
   }
 
 .audio{
