--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,16 @@ body {
   width:100vw;
 }
 
+:root {
+  --text-color: black;
+  --background-color: white;
+}
+
+body {
+  color: var(--text-color);
+  background: var(--background-color);
+}
+
 /* body::after{
   content: "  ";
   position: fixed;
@@ -869,11 +879,11 @@ filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));  */
   .button {
     display: inline-flex;
     align-items: center;
-    padding: 1rem;
+    padding: 1vw 2vw;
     border-radius: 12px;
     text-decoration: none;
     appearance: none;
-    border: 1px solid #111;;
+    border: 1px solid #222;;
     font-size: 16px;
     line-height: 1;
     color:#fff !important;
@@ -903,7 +913,7 @@ filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));  */
     margin-right: 10px;
   }
 
-  #installedbar {display: none;}
+  #installedbar {display:flex;}
 
   @media (max-width: 48rem) {
   .themer{order:8 !important}
@@ -1754,12 +1764,15 @@ input[type="checkbox"]:checked ~ .backdrop1 {
 
 
 .toolbar {margin-bottom:0;}
-@media (max-width: 48rem) {
-  .toolbar{ flex-direction: column !important; gap:30px}
-  .toolbar div{margin-bottom:5px !important;}
-  
-   }
 
+@media (max-width: 48rem) {
+
+  .toolbar{ flex-direction: column !important; gap:10px; justify-content: space-around;}
+  .toolbar div{margin-bottom:5px !important;}
+
+  #installedbar { flex-direction: row !important; gap:4px; width:95%;}
+  #installedbar * { min-width:100px;}
+}
 
 
 .touchup{
