--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,15 +9,7 @@ body {
   width:100vw;
 }
 
-:root {
-  --text-color: black;
-  --background-color: white;
-}
 
-body {
-  color: var(--text-color);
-  background: var(--background-color);
-}
 
 /* body::after{
   content: "  ";
@@ -779,6 +771,7 @@ height:0;
     flex-direction: column;
   }
 
+
 }
 
 
@@ -913,11 +906,15 @@ filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));  */
     margin-right: 10px;
   }
 
-  #installedbar {display:flex;}
+
+
+  footer{display:none !important;}
+
 
   @media (max-width: 48rem) {
   .themer{order:8 !important}
   .keyboard{height:40px !important;}
+  #info {margin-bottom:155px !important;}
   }
 
 .has-app{display:none !important;}
@@ -934,7 +931,7 @@ filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));  */
   /* All installed PWAs */
   #installer{display: none !important; border:10px solid yellow !important;}
   #info, #posts, .toolbar{display:none !important;}
-  #installedbar{display:flex !important;}
+  #installedbar {display: flex !important;}
 
 }
 	
@@ -1767,10 +1764,10 @@ input[type="checkbox"]:checked ~ .backdrop1 {
 
 @media (max-width: 48rem) {
 
-  .toolbar{ flex-direction: column !important; gap:10px; justify-content: space-around;}
+  .toolbar{ flex-direction: column !important; gap:10px; justify-content: space-around; padding-bottom:2rem !important; }
   .toolbar div{margin-bottom:5px !important;}
 
-  #installedbar { flex-direction: row !important; gap:4px; width:95%;}
+  #installedbar { flex-direction: row !important; gap:4px; width:95%; }
   #installedbar * { min-width:100px;}
 }
 
