--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -771,9 +771,16 @@ height:0;
     flex-direction: column;
   }
 
+  .nameblock{background:transparent !important; color:inherit !important; text-shadow:none !important;}
+
 
 }
 
+
+.nameblock{
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
 
 #resume h2{text-align: left !important; font-size:30px !important; border:0px solid red !important;}
 
