--- a/src/styles/user.scss
+++ b/src/styles/user.scss
@@ -8,19 +8,27 @@ h1,h2,h3,h4,.h1,.h2,.h3,.h4, #menu, .header label, .font{font-family: "Roboto", 
 
 
 
+dl *{border:0px solid purple}
 
 dl {
  display: flex;
  background-color: transparent;
  flex-direction: column;
- max-width: 700px;
+//  min-width:48%;
+//  max-width: 700px;
+ width:400px;
  position: relative;
  padding: 0;
- 
+ border:0px solid black;
 }
 
 @media (max-width: 48rem) {
- dl {width: 55%;}
+ dl {width: 48vw;}
+
+ #skills .flexbutt{
+  margin-left:-44vw !important;
+  font-size:90% !important;
+}
 
  img.homepage-bg1{
   max-height:10vh !important;
@@ -34,18 +42,18 @@ dl {
 dt {
  align-self: flex-start;
  width: 100%;
- display: block;
  text-align: right;
  font-size: 1.2em;
  font-weight: 700;
  margin-bottom: 20px;
  margin-left: 140px;
- padding:20px;
- background-color: rgba(12, 12, 12, 0.5);
+ padding:10px;
+ background-color: rgba(12, 12, 12, 0.3);
  border-radius: 12px;
 display:flex;
 justify-content: space-between;
-
+flex-direction:row;
+gap:30px;
 } 
 
 
@@ -60,9 +68,10 @@ justify-content: space-between;
  position: absolute;
  left: 0;
  justify-content: flex-end;
+ border:0px solid;
 }
 
-.percent{left:165px; padding-top:13px; position:absolute; font-weight: bold; font-size: 120%; text-shadow: 2px 2px 2px #000; z-index: 1; border: 0px solid red;}
+.percent{left:165px; padding-top:13px; position:absolute; font-weight: bold; font-size: 120%; z-index: 1; border: 0px solid red;}
 
 .percentage {
  font-size: .8em;
@@ -82,8 +91,8 @@ justify-content: space-between;
  &:after {
    content: "";
    display: block;
-   background-color: rgba(221, 215, 215, 0.3);
-   width: 50px;
+   background-color: rgba(78, 74, 74, 0.3);
+   width: 1px;
    margin-bottom: 10px;
    border-radius: 5px;
    height: 90%;
@@ -95,6 +104,7 @@ justify-content: space-between;
    animation: slide 2s forwards;
    animation-direction: reverse;
    animation-iteration-count: 1;
+   box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1), 0 0 0 1px inset;
  }
  &:hover,
  &:focus {
@@ -240,29 +250,11 @@ animation: move 1.5s forwards;
   0%{
     opacity: 1;
  }
- /* 60% {
-    opacity: 0.6;
- } */
  100% {
     opacity:0;
  }
 }
 
-/* @keyframes move {
-  0% {
-    transform-origin: top -80%;
-    transform: scale(0);
-    opacity: 0;
-    z-index: -3;
-  }
-  
-  100% {
-    transform: scale(1.0);
-    transform-origin: 50% 0%;
-    opacity: 1;
-    z-index: 1;
-  }
-} */
 
 @keyframes move {
   0% {
